CC0 for slides.

--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,27 @@ Search for:&nbsp; Tense Logic, Temporal Logic, Modal Logic.<br>
 	</div>
 	<div class=prose>
   
-These slides:&nbsp; www.yak.net/d<br>
+These slides:&nbsp; http://www.yak.net/d<br>
+
+	</div>
+	<div class=prose>
+  
+<br>
+
+	</div>
+	<div class=prose>
+  
+Source code: https://github.com/strickyak/d-talk<br>
+
+	</div>
+	<div class=prose>
+  
+<br>
+
+	</div>
+	<div class=prose>
+  
+I dedicate these slides to the Public Domain ( Creative Commons CC0 1.0 Universal ).<br>
 
 	</div>
 	<div class=prose>
